Fix learning objectives line wrapping in presentation slides

--- a/website/src/components/PresentationMode/RevealSlideshow.module.css
+++ b/website/src/components/PresentationMode/RevealSlideshow.module.css
@@ -54,7 +54,7 @@
 .objectives {
   margin-top: 1.5em;
   text-align: left;
-  max-width: 90%;
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -62,11 +62,17 @@
 .objectives h3 {
   font-size: clamp(1rem, 2vw, 1.2em);
   margin-bottom: 0.5em;
+  margin-left: 0;
+  margin-right: 0;
 }
 
-.objectives ul {
+:global(.reveal) .objectives ul {
   list-style: none;
   padding: 0;
+  display: block;
+  max-width: 100%;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .objectives li {
